# ticketmint

./: .env.example  .gitignore  Anchor.toml  README.md  next.config.js  package-lock.json  package.json  seed.ts  tailwind.config.ts  tsconfig.json  tsconfig.seed.json  vercel.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/broker/bulk-upload/: route.ts
app/api/cron/price-alerts/: route.ts
app/api/stripe/checkout/: route.ts
app/api/stripe/webhook/: route.ts
app/api/watchlist/: route.ts
app/auth/callback/: route.ts
app/broker/: page.tsx
app/broker/analytics/: page.tsx
app/guarantee/: page.tsx
app/list-ticket/: page.tsx
app/login/: page.tsx
app/marketplace/[id]/: page.tsx
app/my-tickets/: page.tsx
app/purchase-success/: page.tsx
app/signup/: page.tsx
app/validate/[mintAddress]/: page.tsx
components/: BuyTicketButton.tsx  CategoryPills.tsx  DownloadableQR.tsx  GuaranteeBanner.tsx  HeroSearch.tsx  Navbar.tsx  QRTicket.tsx  ResellModal.tsx  SearchFilters.tsx  TicketCard.tsx  WalletButton.tsx  WalletProviders.tsx  WatchButton.tsx
lib/: solana-server.ts  solana.ts  stripe.ts  supabase.ts  utils.ts
lib/emails/: priceAlert.ts  purchaseConfirmation.ts
lib/idl/: ticket_mint_marketplace.json
programs/ticket-mint-marketplace/: Cargo.toml
programs/ticket-mint-marketplace/src/: lib.rs
supabase/: schema.sql
zustand/: store.ts
